feat: add rooms-results
